apps/production/glance/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
spec:
  template:
    spec:
      containers:
        - name: glance
