apps/production/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  tls:
    - hosts:
        - home.dariomazza.net
      secretName: glance-tls
  rules:
    - host: "home.dariomazza.net"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 80
